Store todos in local storage.

--- a/app/views/about.html
+++ b/app/views/about.html
@@ -1,1 +1,4 @@
-<p>This is the about view.</p>
+<h2>Simple ToDo Application</h2>
+<p>You can check source code on <a href="https://github.com/ProDoser/mytodo">Github</a>.</p>
+<p>This application was created with help of man-in-a-hat. Please visit <a href="http://yeoman.io">Yeoman</a>
+for more information.</p>
