Some intro text added

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,6 +1,9 @@
 <div class="container">
     <h2>Todo List</h2>
 
+    <p>Add some tasks for yourself! You can add, delete and reorganize tasks! I will keep your tasks for you even if
+        you leave this page.</p>
+
     <!-- Todos input -->
     <form role="form" ng-submit="addTodo()">
         <div class="row">
